feat: add voting feature
