# docs/swagger.json
@@ -851,6 +851,38 @@
                     }
                 }
             }
+        },
+        "/votes/create": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Record a vote for a poll option",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Vote"
+                ],
+                "summary": "Record a vote",
+                "parameters": [
+                    {
+                        "description": "Poll Data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.CreateVote"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
@@ -1165,6 +1197,17 @@
                     ]
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "requests.CreateVote": {
+            "type": "object",
+            "properties": {
+                "option_id": {
+                    "type": "string"
+                },
+                "poll_id": {
                     "type": "string"
                 }
             }
